pixman (0.21.6-1) UNRELEASED; urgency=low

  * New upstream release.
  * Update symbols file with new symbols.
  * Bump shlibs accordingly.
  * Wrap Build-Depends.
  * Remove libpixman1-dev from Conflicts, last seen in etch!
  * Update Uploaders list. Thanks, David!

 -- Cyril Brulebois <kibi@debian.org>  Wed, 09 Mar 2011 03:20:57 +0100

pixman (0.21.4-2) unstable; urgency=low

  * Upload to unstable.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 06 Feb 2011 05:31:10 +0100

pixman (0.21.4-1) experimental; urgency=low

  * New upstream release.
  * Update debian/copyright from upstream's COPYING.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 19 Jan 2011 20:31:26 +0100

pixman (0.21.2-1) experimental; urgency=low

  * New upstream release.
  * Update debian/copyright from upstream's COPYING.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 17 Nov 2010 15:56:46 +0100

pixman (0.20.0-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 06 Nov 2010 10:00:54 +0100

pixman (0.19.6-1) experimental; urgency=low

  * New upstream release.
  * Bump SHLIBS_VERSION from 0.18.0 to 0.19.4 for newly-added functions.
  * Update symbols file with newly-added functions.
  * Add -c4 to the dh_makeshlibs call, to ensure the build breaks if
    unexpected symbol-related changes happened.
  * As of pixman-0.19.2-5-g5b99710, Gtk+ is auto-detected, make sure not
    to pick it accidentally, by passing --disable-gtk. (That's only for
    test purposes, but would require pixman-1 itself.)
  * Enable the testsuite.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 27 Oct 2010 23:14:00 +0200

pixman (0.18.4-1) experimental; urgency=low

  [ Robert Hooker ]
  * New upstream stable release.

 -- Julien Cristau <jcristau@debian.org>  Mon, 06 Sep 2010 21:15:07 +0200

pixman (0.18.2-1) experimental; urgency=low

  * New upstream stable release. Changes since 0.18.0:
    - b48d8b5... Pre-release version bump to 0.18.2