@@ -1,108 +1,28 @@
 #!/usr/bin/make -f
 
-include /usr/share/quilt/quilt.make
-
 PACKAGE = libpixman-1-0
-SHLIBS_VERSION = 0.21.6
+SHLIBS  = 0.21.6
 
 # Disable Gtk+ autodetection:
-confflags = --disable-gtk
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-gtk
 
-CFLAGS = -Wall -g
-ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	MAKEFLAGS += -j$(NUMJOBS)
-endif
+# Install in debian/tmp to retain control through dh_install:
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
 
-DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-	confflags += --build=$(DEB_HOST_GNU_TYPE)
-else
-	confflags += --build=$(DEB_BUILD_GNU_TYPE) --host=$(DEB_HOST_GNU_TYPE)
-endif
+# Kill *.la files, and forget no-one:
+override_dh_install:
+	find debian/tmp -name '*.la' -delete
+	dh_install --fail-missing
 
-autogen: autogen-stamp
-autogen-stamp: $(QUILT_STAMPFN)
-	dh_testdir
-	autoreconf -vfi
-	touch $@
-
-config: config-stamp
-config-stamp: autogen-stamp
-	dh_testdir
-	test -d build || mkdir build
-	cd build && \
-	../configure \
-	  --prefix=/usr \
-	  --mandir=\$${prefix}/share/man \
-	  --infodir=\$${prefix}/share/info \
-	  $(confflags) \
-	  CFLAGS="$(CFLAGS)"
-	touch $@
-
-
-build: build-stamp
-build-stamp: config-stamp
-	dh_testdir
-	cd build && $(MAKE)
-	cd build && $(MAKE) check
-
-	touch $@
-
-clean: unpatch
-	dh_testdir
-	dh_testroot
-	rm -f autogen-stamp config-stamp build-stamp install-stamp
-
-	rm -f config.cache config.log config.status
-	rm -f */config.cache */config.log */config.status
-	rm -f conftest* */conftest*
-	rm -rf autom4te.cache */autom4te.cache
-	rm -rf build
-	find -name Makefile.in -delete
-	rm -f compile config.guess config.sub configure depcomp install-sh
-	rm -f ltmain.sh missing INSTALL aclocal.m4 config.h.in
-
-	dh_clean
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	cd build && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
-	touch $@
-
-# Install architecture-dependent files here.
-binary-arch: install
-	dh_testdir
-	dh_testroot
-
-	dh_installdocs
-	dh_install --sourcedir=debian/tmp --list-missing
-	dh_installchangelogs ChangeLog
-	dh_link
+# Debug package:
+override_dh_strip:
 	dh_strip --dbg-package=$(PACKAGE)-dbg
-	dh_compress
-	dh_fixperms
-	dh_makeshlibs -p$(PACKAGE) --add-udeb $(PACKAGE)-udeb -V"$(PACKAGE) (>= $(SHLIBS_VERSION))" -- -c4
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
 
-binary-indep: install
-# Nothing to do
+# Shlibs:
+override_dh_makeshlibs:
+	dh_makeshlibs -p$(PACKAGE) --add-udeb $(PACKAGE)-udeb -V"$(PACKAGE) (>= $(SHLIBS))" -- -c4
 
-binary: binary-indep binary-arch
-.PHONY: autogen config build clean binary-indep binary-arch binary install
+%:
+	dh $@ --with quilt,autoreconf --builddirectory=build/
